--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>GRILLAS CSS</h1>
         <section class="grid-section">
             <div class="grid-container">
-                CONTENIDO
+                CONTENIDOjj
 
             </div>
         </section>
