grid web layout

--- a/pages/example-1/example-1.html
+++ b/pages/example-1/example-1.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/example-1.css">
 </head>
 <body>
-    <h1>example 1</h1><header>
+    <h1>example 1</h1>
+    <header class="header">
         <nav>
             <ul>
                 <li><a href="/index.html">HOME</a></li>
@@ -16,6 +18,19 @@
             </ul>
         </nav>
     </header>
+    <aside class="sidebar">
+        sidebar
+    </aside>
+    <main class="main">
+        main content
+    </main>
+    <aside class="aside">
+        aside
+
+    </aside>
+    <footer class="footer">
+        footer
+    </footer>
 
 </body>
 </html>
