--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Css Grid</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <!-- <link rel="stylesheet" href="/css/style.css"> -->
 </head>
 <body>
     <header>
@@ -21,7 +21,15 @@
         <h1>GRILLAS CSS</h1>
         <section class="grid-section">
             <div class="grid-container">
-                CONTENIDOjj
+                <div class="box-grid box-1">box grid 1</div>
+                <div class="box-grid box-2">box grid 2</div>
+                <div class="box-grid box-3">box grid 3</div>
+                <div class="box-grid box-4">box grid 4</div>
+                <div class="box-grid box-5">box grid 5</div>
+                <div class="box-grid box-6">box grid 6</div>
+                <div class="box-grid box-6">box grid 6</div>
+                <div class="box-grid box-6">box grid 6</div>
+                
 
             </div>
         </section>
